JWT ile token oluşturuldu

--- a/APIproje/appsettings.json
+++ b/APIproje/appsettings.json
@@ -8,6 +8,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=BUGRA;Database=WebApiVT;User Id=bugra;Password=123;TrustServerCertificate=True;"
   },
-
+  "AppSettings": {
+    "Secret": "nxe$e2jbg6z=9j*r=zm8nvt^^^cbt&q!+sj+42f738+zr%+!ll"
+  },
   "AllowedHosts": "*"
 }
